# flow-gate.rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.validate  LICENSE  PROJECT_OVERVIEW.md  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
.qwen/: settings.json  settings.json.orig
crates/flow-gate/: Cargo.toml
crates/flow-gate-core/: Cargo.toml
crates/flow-gate-core/benches/: gate_evaluation.rs  transform_throughput.rs
crates/flow-gate-core/src/: error.rs  event.rs  lib.rs  traits.rs
crates/flow-gate-core/src/gate/: boolean.rs  ellipsoid.rs  mod.rs  polygon.rs  rectangle.rs  registry.rs
crates/flow-gate-core/src/transform/: fasinh.rs  hyperlog.rs  linear.rs  logarithmic.rs  logicle.rs  logicle_impl.rs  mod.rs  unified.rs
crates/flow-gate-core/tests/: compliance_checks.rs  gates.rs  transforms.rs
crates/flow-gate-ffi/: Cargo.toml
crates/flow-gate-ffi/src/: lib.rs  matrix.rs  result.rs
crates/flow-gate-ffi/tests/: result.rs
crates/flow-gate-xml/: Cargo.toml
crates/flow-gate-xml/src/: evaluator.rs  lib.rs  namespace.rs  parser.rs  serializer.rs
crates/flow-gate-xml/src/schema/: datatypes.rs  gating.rs  mod.rs  transforms.rs
crates/flow-gate-xml/tests/: roundtrip.rs
crates/flow-gate/src/: lib.rs
crates/flow-gate/tests/: ellipsoid_flowkit_crosscheck.rs
