[package]
name = "flow-gate-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
bitvec = { workspace = true }
indexmap = { workspace = true }

[features]
default = []
simd = []
polygon_scanline = []
nalgebra = ["dep:nalgebra"]

[[bench]]
name = "transform_throughput"
harness = false

[[bench]]
name = "gate_evaluation"
harness = false

[dependencies.nalgebra]
version = "0.32"
optional = true

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
csv = { workspace = true }
criterion = { workspace = true }
