[package]
name = "flow-gate-xml"
description = "Gating-ML 2.0 XML parsing and serialization for flow cytometry gate documents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["flow-cytometry", "gating-ml", "xml", "bioinformatics", "parser"]
categories = ["science", "parser-implementations", "encoding"]

[dependencies]
flow-gate-core = { path = "../flow-gate-core" }
quick-xml = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
