[package]
name = "flow-gate"
description = "Facade crate for flow-gate with compliance runner and benchmark binaries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["flow-cytometry", "gating-ml", "bioinformatics", "compliance"]
categories = ["science", "command-line-utilities"]

[dependencies]
flow-gate-core = { path = "../flow-gate-core" }
flow-gate-xml = { path = "../flow-gate-xml" }
anyhow = "1.0"
flow-fcs = "0.2.2"
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
